--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,27 @@
-{% include head.html %}
+<!DOCTYPE html>
+<html class="no-js">
+  <head>
 
-<!-- Add your site or application content here -->
-<p>{{ content }}</p>
+    {% include head.html %}
 
-{% include footer.html %}
+  </head>
+  <body>
+
+
+    {% include header.html %}
+
+
+    {{ content }}
+
+
+
+
+
+
+
+
+
+    {% include footer.html %}
+
+    </body>
+</html>
