--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
 <script src="{{ site.baseurl }}/js/plugins.js"></script>
 <script src="{{ site.baseurl }}/js/min/waypoints.min.js"></script>
 <script src="{{ site.baseurl }}/js/jquery.counterup.js"></script>
-
+<meta name="google-site-verification" content="kse7z0rUH-wq1V0aCHKYnkfiImoDhhYlQD0IBNu3m9M" />
 
 <script src="{{ site.baseurl }}/js/main.js"></script>
 
